# goit-web-hw-06

./: pyproject.toml
postgres/: connect_postgres.py  create_table_postgres.sql  create_tables_postgres.py  fill_data_postgres.py  select_data_postgres.py
queries/: query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_2.sql  query_3.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
sqlite/: connect_sqlite.py  create_db_sqlite.py  create_table_sqlite.sql  fill_data_sqlite.py  select_data_sqlite.py  student_grades.sqlite
